force-app/main/default/objects/TubeEnds__c/TubeEnds__c.object-meta.xml
<CustomObject>
    <description>Tube ends</description>
    <label>Tube Ends</label>
    <nameField>
        <label>Tube Ends Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tubes Ends</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>