force-app/main/default/objects/TubeEnds__c/fields/NameRus__c.field-meta.xml
<CustomField>
    <fullName>NameRus__c</fullName>
    <description>Tube ends name in Russian</description>
    <inlineHelpText>Tube ends name in Russian</inlineHelpText>
    <label>Tube Ends Name (Rus)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>