force-app/main/default/objects/TubeEnds__c/fields/OCTGEnds__c.field-meta.xml
<CustomField>
    <fullName>OCTGEnds__c</fullName>
    <label>OCTG Ends</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TubeEndsGroups</valueSetName>
    </valueSet>
</CustomField>