force-app/main/default/objects/TubeEnds__c/fields/ShortName__c.field-meta.xml
<CustomField>
    <fullName>ShortName__c</fullName>
    <description>Short name of the tube ends.</description>
    <inlineHelpText>Short name of the tube ends.</inlineHelpText>
    <label>Short Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>