force-app/main/default/objects/TubeEnds__c/fields/TubingEnds__c.field-meta.xml
<CustomField>
    <fullName>TubingEnds__c</fullName>
    <label>Tubing Ends</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TubeEndsGroups</valueSetName>
    </valueSet>
</CustomField>